Fixed z-index order issues

--- a/cz.fhsoft.poker.league/war/Cz_fhsoft_poker_league.css
+++ b/cz.fhsoft.poker.league/war/Cz_fhsoft_poker_league.css
@@ -6,11 +6,3 @@
 .pseudoLink:hover {
 	text-decoration: underline;
 }
-
-.gwt-PopupPanelGlass {
-	z-index: 100;
-}
-
-.gwt-PopupPanel {
-	z-index: 101;
-}
